# vibecut

./: .#README.org  .gitignore  AGENTS.md  CMakeLists.txt  README.org  SHORTCUTS.md  TODO.md
docs/: CONNECTED_CLIPS.md
src/: main.cpp
test_data/: generate_test_video.sh
